--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 		<div class="col-4">
 			<h3 class="text-info">level 1</h3>
 			<ul class="list-group">
-				<li class="list-group-item"><a href="./level1/2.html">basic</a></li>
-				<li class="list-group-item"><a href="./level1/3_addEventListener.html">addEventListener</a></li>
+				<li class="list-group-item"><a href="./level1/2_addEventListener.html">addEventListener</a></li>
 				<li class="list-group-item"><a href="./level1/4_jquery.html">jquery</a></li>
 				<li class="list-group-item"><a href="./level1/5_modal.html">modal</a></li>
 				<li class="list-group-item"><a href="./level1/6_if.html">if</a></li>
@@ -29,17 +28,21 @@
 			<h3 class="text-info">level 1</h3>
 			<ul class="list-group">
 				<li class="list-group-item"><a href="./level2/7_settimeout.html">settimeout</a></li>
-				<li class="list-group-item"><a href="./level2/8_email.html">email</a></li>
+				<li class="list-group-item"><a href="./level2/8_form.html">form</a></li>
 				<li class="list-group-item"><a href="./level2/9_imgslide.html">imgslide</a></li>
-				<li class="list-group-item"><a href="./level2/10_event.html">event</a></li>
+				<li class="list-group-item"><a href="./level2/10_scroll.html">scroll</a></li>
 				<li class="list-group-item"><a href="./level2/11_tap.html">tab</a></li>
-				<li class="list-group-item"><a href="./level2/12_event2.html">event2</a></li>
+				<li class="list-group-item"><a href="./level2/12_bubble.html">bubble</a></li>
 			</ul>
 		</div>
 		<div class="col-4">
 			<h3 class="text-info">level 3</h3>
 			<ul class="list-group">
-				<li class="list-group-item"><a href="./level1/2.html">basic</a></li>
+				<li class="list-group-item"><a href="./level3/13_array.html">array</a></li>
+				<li class="list-group-item"><a href="./level3/14_select.html">select</a></li>
+				<li class="list-group-item"><a href="./level3/15_select2.html">select2</a></li>
+				<li class="list-group-item"><a href="./level3/16_select3.html">select3</a></li>
+				<li class="list-group-item"><a href="./level3/17_99Qz.html">99Qz</a></li>
 				
 			</ul>
 		</div>
