--- a/level1/5_modal.html
+++ b/level1/5_modal.html
@@ -13,25 +13,10 @@
 
 </head>
 <body>
-	
-	<nav class="navbar navbar-light bg-light">
-		<div class="container-fluid">
-			<span class="navbar-brand">Navbar</span>
-			<button class="navbar-toggler" type="button">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-		</div>
-	</nav> 
-	<ul class="list-group">
-		<li class="list-group-item">An item</li>
-		<li class="list-group-item">A second item</li>
-		<li class="list-group-item">A third item</li>
-		<li class="list-group-item">A fourth item</li>
-		<li class="list-group-item">And a fifth one</li>
-	</ul>
+	<a href="../index.html" class="btn btn-outline-primary">home</a>
 
 
-<button id="login" class="btn btn-primary btn1" onclick="showhide('block')">로그인</button>
+<button id="login" class="btn btn-primary btn1" onclick="showhide('block')">로그인모달</button>
 
 	<div class="black-bg">
 		<div class="white-bg">
