--- a/level2/7_settimeout.html
+++ b/level2/7_settimeout.html
@@ -11,15 +11,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-		<div class="container-fluid">
-			<span class="navbar-brand">Navbar</span>
-			<span id="mode" class="badge bg-dark">Dark </span>
-			<button class="navbar-toggler" type="button">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-		</div>
-</nav> 
+	<a href="../index.html" class="btn btn-outline-primary">home</a>
 
 
 <div id="albox" class="alert alert-primary" role="alert">
