--- a/level2/9_imgslide.html
+++ b/level2/9_imgslide.html
@@ -11,6 +11,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
+	<a href="../index.html" class="btn btn-outline-primary">home</a>
+
 <div class="over">
 	<div class="slide-wrap">
 		<div class="slide-box"><img src="../img/1.jpg" alt=""></div>
@@ -44,6 +46,7 @@ $('.btn-3').on('click', function(){
 	curr = 3;
 	$('#curr').html(curr);
 })
+
 $('.btn-next').on('click', function(){
 		document.querySelector('.slide-wrap').style.transform = 'translateX(-'+(curr%3)*300+'px)';
 		curr = curr % 3 + 1;
