--- a/level3/17_99Qz.html
+++ b/level3/17_99Qz.html
@@ -11,6 +11,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
+	<a href="../index.html" class="btn btn-outline-primary">home</a>
+
 <div class="container">
     <div class="row">
        구구단
