--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				<li class="list-group-item"><a href="./level3/15_select2.html">select2</a></li>
 				<li class="list-group-item"><a href="./level3/16_select3.html">select3</a></li>
 				<li class="list-group-item"><a href="./level3/17_99Qz.html">99Qz</a></li>
+				<li class="list-group-item"><a href="./level3/18_ajax.html">ajax</a></li>
+				<li class="list-group-item"><a href="./level3/19_sort.html">sort</a></li>
 				
 			</ul>
 		</div>
