--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" 
 	content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>js</title>
 	<link rel="stylesheet" href="./level1/style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -23,9 +23,8 @@
 				<li class="list-group-item"><a href="./level1/5_modal.html">modal</a></li>
 				<li class="list-group-item"><a href="./level1/6_if.html">if</a></li>
 			</ul>
-		</div>
-		<div class="col-4">
-			<h3 class="text-info">level 1</h3>
+			<hr>
+			<h3 class="text-info">level 2</h3>
 			<ul class="list-group">
 				<li class="list-group-item"><a href="./level2/7_settimeout.html">settimeout</a></li>
 				<li class="list-group-item"><a href="./level2/8_form.html">form</a></li>
@@ -45,7 +44,15 @@
 				<li class="list-group-item"><a href="./level3/17_99Qz.html">99Qz</a></li>
 				<li class="list-group-item"><a href="./level3/18_ajax.html">ajax</a></li>
 				<li class="list-group-item"><a href="./level3/19_sort.html">sort</a></li>
-				
+				<hr>
+				<li class="list-group-item"><a href="./level3/20_cart.html">cart</a></li>
+				<li class="list-group-item"><a href="./level3/21_cartpage.html">cart Page</a></li>
+				<li class="list-group-item"><a href="./level3/22_sticky.html">sticky</a></li>
+				<li class="list-group-item"><a href="./level3/23_scrollAni.html">scroll ani</a></li>
+				<li class="list-group-item"><a href="./level3/24_swipe.html">swipe</a></li>
+				<li class="list-group-item"><a href="./level3/25_switch.html">switch</a></li>
+				<li class="list-group-item"><a href="./level3/26_cartTest.html">Cart Qz</a></li>
+				<li class="list-group-item"><a href="./level3/26_sample.html">Sample</a></li>
 			</ul>
 		</div>
 	</div>
@@ -53,11 +60,5 @@
 	
 </div>
 
-	<script>
-
-		
-
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
