--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 				<li class="list-group-item"><a href="./level1/2_addEventListener.html">addEventListener</a></li>
 				<li class="list-group-item"><a href="./level1/4_jquery.html">jquery</a></li>
 				<li class="list-group-item"><a href="./level1/5_modal.html">modal</a></li>
-				<li class="list-group-item"><a href="./level1/6_if.html">if</a></li>
+				<li class="list-group-item"><a href="./level1/6_if.html">if, form, darkmode</a></li>
 			</ul>
 			<hr>
 			<h3 class="text-info">level 2</h3>
 			<ul class="list-group">
 				<li class="list-group-item"><a href="./level2/7_settimeout.html">settimeout</a></li>
-				<li class="list-group-item"><a href="./level2/8_form.html">form</a></li>
-				<li class="list-group-item"><a href="./level2/9_imgslide.html">imgslide</a></li>
+				<li class="list-group-item"><a href="./level2/8_form.html">정규식, form</a></li>
+				<li class="list-group-item"><a href="./level2/9_imgslide.html">간단 캐러셀</a></li>
 				<li class="list-group-item"><a href="./level2/10_scroll.html">scroll</a></li>
-				<li class="list-group-item"><a href="./level2/11_tap.html">tab</a></li>
-				<li class="list-group-item"><a href="./level2/12_bubble.html">bubble</a></li>
+				<li class="list-group-item"><a href="./level2/11_tap.html">tab, for</a></li>
+				<li class="list-group-item"><a href="./level2/12_bubble.html">bubble, dataset</a></li>
 			</ul>
 		</div>
 		<div class="col-4">
