--- a/level1/4_jquery.html
+++ b/level1/4_jquery.html
@@ -41,7 +41,7 @@
 			$('#al').show();
 		})
 		$('.btn-close').on('click', function(){
-			$('#al').hide();
+			$('#al').hide();  // or slideUp()
 		})
 
 	</script>
