--- a/level2/10_scroll.html
+++ b/level2/10_scroll.html
@@ -37,12 +37,11 @@
 
 
 <script>
-	
-window.addEventListener('scroll', function(){
-	//window.scrollY();
+	//window.scrollY();  // 스크롤한 양
 	//window.scrollTo(0, 100); // 강제로 100
 	//window.scrollBy(0, 100) // 현재위치에서 100
 
+window.addEventListener('scroll', function(){
 	var th = window.scrollY;
 	if(th > 150){
 		document.querySelector('.navbar-brand').classList.add('small');
@@ -75,9 +74,10 @@ document.querySelector('.lorem').addEventListener('scroll', function(){
 	}
 	console.log(th2,th2box, th2sr);
 })
+//부트스트랩 사용시 css수정
+//:root {scroll-behavior:auto;}
 
-
-//로드 된 뒤에 실행, 1초에 60번 움직이므로 
+// scroll은 로드 된 뒤에 실행, 1초에 60번 움직임 
 // document.querySelector('html').scrollHeight; 페이지 높이
 // document.documentElement.scrollHeight; 페이지 높이
 // document.querySelector('html').scrolltop; 스크롤한 높이
@@ -86,6 +86,15 @@ document.querySelector('.lorem').addEventListener('scroll', function(){
 // 	$(window).scrollTop; //스크롤한 높이 
 // 	$(window).scrollTop(100); //100으로 이동 
 // })
+
+//return
+// function 함수(){
+// 	return 123  //123 퉤 벹어라, 함수 종료도 해라. 
+// }
+// var num = (a*1.1).toFixed() //소수점 반올림, 문자화됨
+// var num = (a*1.1).toFixed(2) //소수점 둘째자리까지 반올림. 문자화됨 
+// return parseFloat(num); // 숫자화됨
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
