--- a/level2/7_settimeout.html
+++ b/level2/7_settimeout.html
@@ -29,17 +29,21 @@
 				document.querySelector('#albox').style.display = 'none';
 				clearTimeout(settime);
 			}
-			console.log(count)
 		}, 1000);
 		
 			
 
 		// setTimeout(function(){
 
-		// }, 1000)
+		// }, 1000)  1초후에 실행 
 		// setInterval(function(){
 
-		// }, 1000)
+		// }, 1000)  1초마다 실행
+
+		// setTimeout(함수, 1000)
+		//function 함수(){
+	    //  내용
+		//} 
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
