--- a/level1/2_addEventListener.html
+++ b/level1/2_addEventListener.html
@@ -41,7 +41,8 @@
 	<script>
 
 		document.getElementsByClassName('navbar-toggler')[0].addEventListener('click', function(){
-			// document.getElementsByClassName('list-group')[0].classList.add('show');
+		  // keydown or scroll mouseover...
+      // document.getElementsByClassName('list-group')[0].classList.add('show');
 			// document.getElementsByClassName('list-group')[0].classList.toggle('show');
 			// document.querySelectorAll('.list-group')[0].classList.toggle('show');
 			document.querySelector('.list-group').classList.toggle('show');
@@ -59,6 +60,10 @@
 			document.getElementById('albox').style.display = i;
 			document.getElementsByClassName('atext')[0].innerHTML = '비번입력하셈';
 		}
+
+
+ 
+</script>
 
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
