--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			<ul class="list-group">
 				<li class="list-group-item"><a href="./level3/13_array.html">array</a></li>
 				<li class="list-group-item"><a href="./level3/14_select.html">select</a></li>
-				<li class="list-group-item"><a href="./level3/15_select2.html">select2</a></li>
-				<li class="list-group-item"><a href="./level3/16_select3.html">select3</a></li>
-				<li class="list-group-item"><a href="./level3/17_99Qz.html">99Qz</a></li>
+				<li class="list-group-item"><a href="./level3/15_selectAppend.html">select, Append</a></li>
+				<li class="list-group-item"><a href="./level3/16_select_forEach.html">select, forEach, for in</a></li>
+				<li class="list-group-item"><a href="./level3/17_99Qz.html">구구단</a></li>
 				<li class="list-group-item"><a href="./level3/18_ajax.html">ajax</a></li>
 				<li class="list-group-item"><a href="./level3/19_sort.html">sort</a></li>
 				<hr>
@@ -51,8 +51,10 @@
 				<li class="list-group-item"><a href="./level3/23_scrollAni.html">scroll ani</a></li>
 				<li class="list-group-item"><a href="./level3/24_swipe.html">swipe</a></li>
 				<li class="list-group-item"><a href="./level3/25_switch.html">switch</a></li>
-				<li class="list-group-item"><a href="./level3/26_cartTest.html">Cart Qz</a></li>
-				<li class="list-group-item"><a href="./level3/26_sample.html">Sample</a></li>
+				<li class="list-group-item"><a href="./level3/26_cartTest.html">Cart Quiz</a> 
+					<a href="./level3/26_sample.html">Sample</a>
+				</li>
+				
 			</ul>
 		</div>
 	</div>
