--- a/level3/17_99Qz.html
+++ b/level3/17_99Qz.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="row">
        구구단
-       <p class="numbox"> </p>
+       <p class="numbox row"> </p>
 
     </div>
 </div>
@@ -27,17 +27,20 @@
 //구구단
 var num1;
 var num2;
+var num3;
 function num99() {
 
    for(var j = 2; j<10; j++) {
+		
+		num2 = '<div class="col-4 p-3 border">';
 
-    for(var i = 1; i<10; i++){
+		for(var i = 1; i<10; i++){
      num1 = j*i ; 
-     num2 = j + ' X ' + i + ' = ' + num1 + '<br>';
-     $('.numbox').append(num2);
-    } 
+     num2 += j + ' X ' + i + ' = ' + num1 + '<br>';
+    };
+		
+		$('.numbox').append(num2);
 
-    $('.numbox').append('<hr>');
    }
    
    
