--- a/book_js/3_360deg/01_360VR.html
+++ b/book_js/3_360deg/01_360VR.html
@@ -11,8 +11,140 @@
 		<style>
 			#slider { width:500px; margin-left:150px;}
 			#slideList > p { display:none; margin-left:100px; }
+			#slideList {height: 400px; position: sticky; top:0;  }
 		</style>
+		
+	</head>
+	<body>
+		<div style="height: 200px;background-color: aquamarine;">Scroll</div>
+		<div style="border:1px solid #444; height: 1100px;">
+			<div id="slideList" style="">
+				<p style="display:block;"><img src="slideImg/Picanto_Green_00000.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00001.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00002.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00003.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00004.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00005.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00006.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00007.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00008.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00009.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00010.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00011.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00012.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00013.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00014.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00015.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00016.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00017.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00018.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00019.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00020.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00021.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00022.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00023.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00024.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00025.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00026.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00027.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00028.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00029.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00030.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00031.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00032.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00033.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00034.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00035.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00036.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00037.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00038.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00039.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00040.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00041.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00042.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00043.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00044.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00045.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00046.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00047.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00048.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00049.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00050.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00051.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00052.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00053.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00054.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00055.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00056.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00057.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00058.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00059.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00060.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00061.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00062.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00063.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00064.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00065.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00066.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00067.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00068.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00069.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00070.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00071.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00072.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00073.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00074.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00075.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00076.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00077.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00078.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00079.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00080.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00081.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00082.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00083.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00084.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00085.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00086.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00087.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00088.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00089.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00090.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00091.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00092.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00093.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00094.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00095.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00096.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00097.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00098.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00099.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00100.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00101.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00102.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00103.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00104.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00105.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00106.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00107.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00108.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00109.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00110.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00111.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00112.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00113.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00114.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00115.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00116.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00117.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00118.jpg" alt="" /></p>
+				<p><img src="slideImg/Picanto_Green_00119.jpg" alt="" /></p>
+			</div>
+			<div id="slider"></div>
+		</div>
+		<div style="height: 2000px; background-color: aquamarine;">Scroll</div>
 		<script>
+			
 			$(document).ready(function(){
 				var imageList = $('#slideList > p');
 				$('#slider').slider({
@@ -22,137 +154,28 @@
 						var start = 0;
 						var end = imageList.size() - 1;
 						var imgIndex = parseInt((ui.value - min) * (end - start) / (max - min) + start);
-						
 						imageList.css('display', 'none');
 						imageList.eq(imgIndex).css('display', 'block');
 					}
 				});
 			});
+
+			$(window).scroll(function(){
+				var sh = $(window).scrollTop();
+				var imageList = $('#slideList > p');
+				
+				if(sh <= 1180 ){
+					var imageList = $('#slideList > p');
+					var imgIndex = parseInt(sh / 10 + 1);
+					console.log(sh, imgIndex);
+					imageList.css('display', 'none');
+					imageList.eq(imgIndex).css('display', 'block');
+				} else if (sh > 1180 ){
+					imageList.css('display', 'none');
+					imageList.eq(119).css('display', 'block');
+				}
+			});
+
 		</script>
-	</head>
-	<body>
-		<div id="slideList">
-			<p style="display:block;"><img src="slideImg/Picanto_Green_00000.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00001.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00002.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00003.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00004.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00005.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00006.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00007.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00008.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00009.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00010.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00011.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00012.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00013.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00014.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00015.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00016.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00017.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00018.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00019.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00020.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00021.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00022.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00023.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00024.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00025.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00026.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00027.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00028.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00029.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00030.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00031.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00032.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00033.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00034.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00035.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00036.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00037.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00038.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00039.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00040.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00041.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00042.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00043.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00044.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00045.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00046.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00047.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00048.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00049.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00050.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00051.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00052.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00053.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00054.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00055.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00056.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00057.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00058.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00059.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00060.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00061.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00062.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00063.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00064.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00065.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00066.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00067.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00068.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00069.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00070.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00071.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00072.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00073.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00074.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00075.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00076.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00077.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00078.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00079.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00080.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00081.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00082.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00083.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00084.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00085.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00086.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00087.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00088.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00089.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00090.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00091.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00092.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00093.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00094.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00095.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00096.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00097.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00098.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00099.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00100.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00101.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00102.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00103.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00104.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00105.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00106.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00107.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00108.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00109.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00110.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00111.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00112.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00113.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00114.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00115.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00116.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00117.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00118.jpg" alt="" /></p>
-			<p><img src="slideImg/Picanto_Green_00119.jpg" alt="" /></p>
-		</div>
-		<div id="slider"></div>
 	</body>
 </html>
