--- a/book_js/4_gallery/gallery.html
+++ b/book_js/4_gallery/gallery.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title>gallery</title>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/jquery.easing.1.3.min.js"></script>
+		
 		<script type="text/javascript" src="js/gallery.js"></script>
 		<style>
 			* { margin:0; padding:0; }
@@ -25,7 +25,9 @@
 		</style>
 	</head>
 	<body>
+		<div class="current">1</div>
 		<div id="gallery">
+			
 			<div id="image">
 				<p style="display:block;"><img src="slideImg/0.jpg" alt="" /></p>
 				<p><img src="slideImg/1.jpg" alt="" /></p>
