--- a/book_js/5_scrollMenu/scroll_menu.html
+++ b/book_js/5_scrollMenu/scroll_menu.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title>scroll_menu</title>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/jquery.easing.1.3.min.js"></script>
+	
 		<script type="text/javascript" src="js/scroll_menu.js"></script>
 		<style>
 			* { margin:0; padding:0; }
@@ -17,7 +17,7 @@
 			#top_menu ul {float:right; margin-right:33px;}
 			#top_menu ul li { padding:59px 0px 0px 63px; float:left; list-style: none; color: #CCCCCC; }
 			#top_menu ul li a { color:#fff; text-decoration:none; }
-			#top_menu ul li.on a { color:#000; font-weight:bold; } 
+			#top_menu ul li.on a { color:rgb(179, 92, 241); font-weight:bold; } 
 			#logo {float:left; width:125px; padding-top:40px; color:#FFFFFF;}
 			
 			#contents {}
@@ -35,8 +35,8 @@
 					<a href="#home"><img src="img/logoPaper.png" alt="Paper" /></a>
 				</div>
 				<ul>
-					<li class="on"><a href="#works">paper</a></li>
-					<li><a href="#company">works</a></li>
+					<li class="on"><a href="#paper">paper</a></li>
+					<li><a href="#works">works</a></li>
 					<li><a href="#email">email</a></li>
 				</ul>
 					
