--- a/book_js/9_responsive/responsive_web.html
+++ b/book_js/9_responsive/responsive_web.html
@@ -12,13 +12,15 @@
 		<script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
 		<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 		<script type="text/javascript">
-			$(function(){
+		
+		
+		$(function(){
 				var maxSize = 30;
 				var body = $('body');
 				var boxInfo = [];
 				
 				for(var i=0; i<maxSize; i++){
-					var box = '<div class="box">';
+					var box = '<div class="box">'+i;
 					body.append(box);
 				}
 				
