--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>js</title>
 	<style>
 		h3.text-info { color: #333 !important;}
+		:root a {text-decoration: none;}
 		</style>
 	<link rel="stylesheet" href="./level1/style.css">
 	
