--- a/jqueryBook/2_webUI/index.html
+++ b/jqueryBook/2_webUI/index.html
@@ -4,10 +4,9 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Chapter 05 Advanced - jQuery 최고의 교과서</title>
-<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Ropa+Sans">
+
 <link rel="stylesheet" href="./css/normalize.css">
 <link rel="stylesheet" href="./css/main.css">
-<script src="//maps.google.com/maps/api/js?language=ja&sensor=false"></script>
 <script src="./js/vendor/modernizr.custom.min.js"></script>
 <script src="./js/vendor/jquery-1.10.2.min.js"></script>
 <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
@@ -42,33 +41,29 @@
     </div>
 </header>
 
-
-
 <div role="main">
-
-   
-    <section class="work-section" id="work">
-        <header class="section-header">
-            <div class="inner clearfix">
-                <h2>Pick up work</h2>
-                <ul class="tabs-nav">
-                    <li><a href="#work01">Work 01</a></li>
-                    <li><a href="#work02">Work 02</a></li>
-                    <li><a href="#work03">Work 03</a></li>
-                    <li><a href="#work04">Work 04</a></li>
-                    <li><a href="#work05">Work 05</a></li>
-                </ul>
-                <span class="tabs-highlight"></span>
-            </div>
-        </header>
-        <div class="section-body">
-            <section class="tabs-panel" id="work01"></section>
-            <section class="tabs-panel" id="work02"></section>
-            <section class="tabs-panel" id="work03"></section>
-            <section class="tabs-panel" id="work04"></section>
-            <section class="tabs-panel" id="work05" ></section>
-        </div>
-    </section><!-- /#work -->
+	<section class="work-section" id="work">
+			<header class="section-header">
+					<div class="inner clearfix">
+							<h2>Pick up work</h2>
+							<ul class="tabs-nav">
+									<li><a href="#work01">Work 01</a></li>
+									<li><a href="#work02">Work 02</a></li>
+									<li><a href="#work03">Work 03</a></li>
+									<li><a href="#work04">Work 04</a></li>
+									<li><a href="#work05">Work 05</a></li>
+							</ul>
+							<span class="tabs-highlight"></span>
+					</div>
+			</header>
+			<div class="section-body">
+					<section class="tabs-panel" id="work01"></section>
+					<section class="tabs-panel" id="work02"></section>
+					<section class="tabs-panel" id="work03"></section>
+					<section class="tabs-panel" id="work04"></section>
+					<section class="tabs-panel" id="work05" ></section>
+			</div>
+	</section>
 
 </div>
 
@@ -76,7 +71,6 @@
     <button type="button" class="back-to-top">
         <span class="label">TOP</span>
     </button>
-   
 </footer>
 
 </body>
