--- a/jqueryBook/3_masonry/index.html
+++ b/jqueryBook/3_masonry/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Chapter 06-05 - jQuery 최고의 교과서</title>
-<link rel="stylesheet" href="./css/normalize.css">
+<!-- <link rel="stylesheet" href="./css/normalize.css"> -->
 <link rel="stylesheet" href="./css/colorbox.css">
 <link rel="stylesheet" href="./css/main.css">
-<script src="./js/vendor/modernizr.custom.min.js"></script>
+<!-- <script src="./js/vendor/modernizr.custom.min.js"></script> -->
 <script src="./js/vendor/jquery-1.10.2.min.js"></script>
-<script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
+<!-- <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script> -->
 <script src="./js/vendor/jquery.ba-throttle-debounce.min.js"></script>
 <script src="./js/vendor/imagesloaded.pkgd.min.js"></script>
 <script src="./js/vendor/masonry.pkgd.min.js"></script>
