--- a/level3/16_select_forEach.html
+++ b/level3/16_select_forEach.html
@@ -59,8 +59,8 @@ var tops = [90,95,100];
 
 var car = { name:'sonata', price:1000, color:'white'};
 for (var key in car){
-	console.log(key);
-	console.log(car[key]);
+	console.log(key, car[key]);
+	
 }
 
 // 축약 가능 
